# buisnessmens_ru_parser

./: README.md  pyproject.toml
buisnessmens_ru_parser/: __init__.py
tests/: test_buisnessmens_ru_parser.py
